[package]
name = "kalmar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
num_enum = "0.7.0"
strum = "0.24.1"
strum_macros = "0.24.3"

[lib]
name = "kalmar"
path = "src/lib.rs"

[[bin]]
name = "kalmar"
path = "src/bin/bin.rs"
